Add chat folders (merge of many commits)

--- a/src/components/left/settings/folders/SettingsFolders.scss
+++ b/src/components/left/settings/folders/SettingsFolders.scss
@@ -117,3 +117,9 @@
   flex-direction: column;
   overflow: hidden;
 }
+.SettingsFolderEdit_picker {
+  .bubble {
+    width: calc(var(--symbol-menu-width) + var(--scrollbar-width));
+    height: calc(var(--symbol-menu-height));
+  }
+}
