--- a/src/components/left/LeftColumn.scss
+++ b/src/components/left/LeftColumn.scss
@@ -24,11 +24,7 @@
 
   .SearchInput {
     margin-left: 0.625rem;
-    max-width: calc(100% - 3.25rem);
-
-    @media (max-width: 600px) {
-      max-width: calc(100% - 3rem);
-    }
+    margin-right: 0.625rem;
   }
 
   @media (max-width: 600px) {
@@ -66,4 +62,12 @@
       --offset-x: -4.125rem;
     }
   }
+}
+
+.LeftColumn_container {
+  display: flex;
+  flex-direction: row;
+}
+.LeftColumn_trans {
+  min-width: 0;
 }
