--- a/src/components/ui/Tab.scss
+++ b/src/components/ui/Tab.scss
@@ -7,6 +7,7 @@
   width: auto;
   margin: 0;
   border: none;
+  font-size: 0.875rem;
   padding: 0.625rem 1.125rem;
   font-weight: var(--font-weight-semibold);
   color: var(--color-text-secondary);
