--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -103,7 +103,7 @@
   }
 }
 
-.form-control {
+.form-control, .form-control-parent {
   --border-width: 1px;
   display: block;
   width: 100%;
@@ -134,6 +134,7 @@
   }
 
   &:focus,
+  &:focus-within,
   &.focus {
     border-color: var(--color-primary);
     box-shadow: inset 0 0 0 1px var(--color-primary);
@@ -183,6 +184,22 @@
   &::-ms-clear,
   &::-ms-reveal {
     display: none;
+  }
+}
+
+.form-control-parent {
+  padding: 0px;
+  .icon-container {
+    display: flex;
+  }
+
+  .form-control {
+    border: none !important;
+    background: none;
+    padding-right: 0; // The right padding is essentially compensated by the icon
+    &:focus, &.focus {
+      box-shadow: none;
+    }
   }
 }
 
