--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -191,6 +191,8 @@ $color-message-story-mention-to: #74bcff;
 
   --color-telegram-blue: #{$color-primary};
 
+  --color-left-folders: #212121;
+
   --color-forum-hover-unread-topic: #e9e9e9;
   --color-forum-hover-unread-topic-hover: #dcdcdc;
 
